k8s-manifessts/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nodejs-app-svc
  name: nodejs-app-svc
spec:
  ports:
  - port: 4000
    protocol: TCP
    targetPort: 4000
  selector:
    app: nodejs-app
  type: ClusterIP
