k8s-manifessts/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-app-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: nodejs-app-svc
            port:
              number: 4000
        path: /
        pathType: Prefix
